--- a/d2cmall-common/d2cmall-common-core/pom.xml
+++ b/d2cmall-common/d2cmall-common-core/pom.xml
@@ -72,7 +72,7 @@
 		
 		<!-- jxl -->
 		<dependency>
-			<groupId>jexcelapi</groupId>
+			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
 		</dependency>
 		
