--- a/d2cmall-common/d2cmall-common-mybatis/pom.xml
+++ b/d2cmall-common/d2cmall-common-mybatis/pom.xml
@@ -57,7 +57,7 @@
 		
 		<!-- LCN -->
 		<dependency>
-		    <groupId>com.mythird</groupId>
+		    <groupId>com.codingapi</groupId>
 		    <artifactId>tx-client</artifactId>
 			<exclusions>
 				<exclusion>
@@ -76,12 +76,12 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.mythird</groupId>
+		    <groupId>com.codingapi</groupId>
 		    <artifactId>tx-plugins-db</artifactId>
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.mythird</groupId>
+		    <groupId>com.codingapi</groupId>
 		    <artifactId>transaction-dubbo</artifactId>
 		</dependency>      
 		
